Correct me section on mobile

--- a/styles/portfolio-style.sass
+++ b/styles/portfolio-style.sass
@@ -720,13 +720,13 @@ p
 
 @media (max-width: 612px)
   .profileImage
-    top: -40px !important
-    transform: scale(0.4) !important
+    top: -60px !important
+    transform: scale(0.45) !important
 
     p
-      transform: scale(1.4) !important
+      transform: scale(1.5) !important
       width: 380px !important
-      left: 40px !important
+      left: 65px !important
 
 
     p
@@ -791,7 +791,7 @@ p
       transform: scale(1) !important
 
   .laNacionSection
-    top: 2180px
+    top: 2100px
     width: 300px
     height: 490px
 
